--- a/src/web/Views/Shared/TagDetails.cshtml
+++ b/src/web/Views/Shared/TagDetails.cshtml
@@ -70,21 +70,6 @@
                 @Html.Raw(Model.Chart.Labels.Select(v => $"'{v.ToString()}'").Aggregate((a, b) => a + ", " + b))
             ],
             datasets: [
-            @foreach(var serie in Model.Chart.Series.Where(s => s.Group == "main"))
-            {
-                <text>
-                {
-                    label: '@serie.Label',
-                    data: [
-                        @Html.Raw(serie.Values.Select(v => v.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)).Aggregate((a, b) => a + ", " + b))
-                    ],
-                    stack: "main",
-                    //backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                    //borderColor: 'rgba(255, 99, 132, 1)',
-                    borderWidth: 1
-                },                    
-                </text>
-            }
             {
                 label: 'Montant',
                 data: [
@@ -92,7 +77,7 @@
                 ],
                 type: 'line',
                 borderColor: 'rgba(255, 99, 132, 1)',
-                borderWidth: 1
+                borderWidth: 2
             },
             {
                 label: 'Moyenne',
@@ -103,17 +88,35 @@
                 type: 'line',
                 borderColor: 'rgba(255, 132, 99, 1)',
                 borderWidth: 1
+            }
+            @foreach(var serie in Model.Chart.Series.Where(s => s.Group == "main"))
+            {
+                <text>
+                ,{
+                    label: '@serie.Label',
+                    data: [
+                        @Html.Raw(serie.Values.Select(v => v.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)).Aggregate((a, b) => a + ", " + b))
+                    ],
+                    stack: "main",
+                    backgroundColor: '#@serie.BackgroundColor',
+                    //borderColor: 'rgba(255, 99, 132, 1)',
+                    borderWidth: 1
+                }    
+                </text>
             }]
         },
         options: {
             responsive: true,
             scales: {
                 y: {
-                    stacked: true
+                    stacked: true,
                 },
                 yAxes: [{
                     ticks: {
                         beginAtZero: true
+                    },
+                    gridLines: {
+                        borderColor: "#FAFAFA"
                     }
                 }]
             }
